<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context=".add_group">

    <android.support.v7.widget.Toolbar
        android:id="@+id/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:orientation="horizontal">

            <Button
                android:id="@+id/myHome"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/홈" />

            <Button
                android:id="@+id/mySelf"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/개인일정" />

            <Button
                android:id="@+id/myGroup"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/그룹일정" />
        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/Title"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@+id/Toolbar">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/새로운그룹" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/Title">

        <LinearLayout
            android:id="@+id/group_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/group_name_text"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/그룹명" />

            <EditText
                android:id="@+id/input_group_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:textSize="15sp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/그룹입력"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/group_member"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/group_member_text"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/번호" />

            <EditText
                android:id="@+id/group_input_member"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:textSize="15sp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/번호입력" />

            <Button
                android:id="@+id/group_member_button"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/조회" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/member"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/member_name"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/그룹멤버" />

            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingStart="15dp"
                android:paddingTop="10dp"
                android:textSize="20dp"
                android:background="#89C7B6"
                android:text="@string/사용자" />

        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/CancelS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="80dp"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_action_cancle" />

    <android.support.design.widget.FloatingActionButton
                android:id="@+id/RegisterS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="17dp"
                android:layout_marginEnd="17dp"
                app:backgroundTint="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_action_puls" />




</android.support.constraint.ConstraintLayout>